# healthwatch-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  STATUS.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
dashboard/: app.py
data_quality/: __init__.py  quality_checks.py  report.json
dbt_project/: .user.yml  dbt_project.yml
dbt_project/models/: _sources.yml  schema.yml
dbt_project/models/marts/: mart_disease_trends.sql
dbt_project/models/staging/: stg_covid_surveillance.sql  stg_flu_surveillance.sql
scripts/: check_tables.py  list_tables.py
src/: __init__.py
src/extract/: __init__.py  cdc_api_client.py  config.py
src/load/: __init__.py  duckdb_loader.py
src/utils/: logging_config.py
tests/: test_extract.py
